# horo-engine

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  engine.config.toml.example  imgui.ini  pyproject.toml  release-please-config.json  sonar-project.properties
apps/: CMakeLists.txt
apps/HoroEditor/: main.cpp
apps/HoroEditor/app/: HoroEditorApp.cpp  HoroEditorApp.h
apps/HoroEditor/resources/: HoroEditor.icns
src/: CMakeLists.txt
src/application/project/: ProjectCompatibility.cpp  ProjectErrors.cpp  ProjectErrors.h  ProjectVersion.cpp
src/application/project_migration/: ProjectMigrationExecution.cpp  ProjectMigrationRegistry.cpp
src/editor/: EditorServiceErrors.cpp  EditorServiceErrors.h
src/editor/app/: EditorGuiApp.cpp  EditorTheme.cpp  EditorTheme.h
src/editor/data_bus/: EditorDataBus.cpp
src/editor/design_system/: DesignTokens.h
src/editor/document/: EditorRenderExtractionErrors.cpp  EditorRenderExtractionErrors.h  EditorViewportPicking.cpp  EditorViewportPicking.h  EditorViewportSceneExtractor.cpp  EditorViewportSceneExtractor.h  RuntimeSceneConversion.cpp  RuntimeSceneConversion.h  SceneDocument.cpp  SceneDocument.h
src/editor/hierarchy/: HierarchyModel.cpp
src/editor/input/: EditorInputActions.cpp  EditorInputActions.h
src/editor/localization/: LocalizationService.cpp
src/editor/menu/: EditorMenuModel.cpp  EditorMenuPlatform.cpp  EditorMenuPlatform.h
src/editor/modals/: EditorModalHost.cpp
src/editor/project_model/: EditorModelErrors.cpp  EditorModelErrors.h  EditorSelectionModel.cpp  EditorSelectionModel.h  EditorViewportCamera.cpp  EditorViewportCamera.h  EditorViewportModel.cpp  EditorViewportModel.h  ProjectCreationService.cpp  ProjectMetadata.cpp  ProjectMetadata.h  ProjectMigrationTransaction.cpp  ProjectMutation.cpp  ProjectOpenService.cpp  RecentProjectInspectionService.cpp  RendererAvailability.cpp  RendererAvailability.h
src/editor/renderer/: EditorGuiRenderer.h  EditorRendererErrors.h  EditorViewportRenderer.h  EditorViewportScene.cpp  EditorViewportScene.h
src/editor/screens/: GuiScreenHost.cpp  NavigationErrors.cpp  NavigationErrors.h  WelcomeScreen.cpp
src/editor/settings/: EditorConfiguration.cpp  EditorSettingsService.cpp  EditorSettingsStore.cpp
src/editor/status_bar/: EditorStatusBar.cpp  EditorStatusBar.h  EditorStatusBarModel.cpp
src/foundation/: FoundationErrors.cpp  FoundationErrors.h
src/foundation/config/: Configuration.cpp
src/foundation/data_bus/: DataBus.cpp
src/foundation/diagnostics/: DiagnosticsEngine.cpp  ErrorCode.cpp
src/foundation/hashing/: Sha256.cpp
src/foundation/jobs/: JobSystem.cpp
src/foundation/logging/: LogContext.cpp  Logger.cpp
src/foundation/math/: SceneMath.cpp
src/foundation/paths/: PathUtils.cpp
src/foundation/text/: String.cpp
src/platform/: Platform.cpp
src/runtime/assets/: AssetErrors.cpp  AssetErrors.h
src/runtime/frame/: FrameScheduler.cpp
src/runtime/input/: Input.cpp  InputErrors.cpp  InputErrors.h
src/runtime/lifecycle/: RuntimeErrors.cpp  RuntimeErrors.h  RuntimeHost.cpp  RuntimeLifecycle.cpp
src/runtime/scene/: RuntimeScene.cpp  RuntimeSceneDefinition.cpp  RuntimeSceneErrors.cpp  RuntimeSceneErrors.h
tests/: CMakeLists.txt  README.md  TestTempPaths.h  UiTestRegistry.cpp  UiTestRegistry.h  imgui_test_engine_config.h  test_animation.cpp  test_architecture_docs.cpp  test_blueprint.cpp  test_camera.cpp  test_camera_extended.cpp  test_constraints.cpp  test_core.cpp  test_e2e_game_loading.cpp  test_ecs.cpp  test_editor.cpp  test_editor_unit.cpp  test_engine_config.cpp  test_fbx_import.cpp  test_gi_reflection_regression.cpp  test_gizmo.cpp  test_gjk.cpp  test_gjk_extended.cpp  test_input.cpp  test_integration.cpp  test_launcher_core.cpp  test_launcher_ui.cpp  test_launcher_unit.cpp  test_logger_env.cpp  test_math.cpp  test_math_coverage.cpp  test_math_extended.cpp  test_mcp.cpp  test_mesh_cache.cpp  test_null_renderer.cpp  test_obj_import.cpp  test_physics.cpp  test_physics_coverage.cpp  test_physics_deep.cpp  test_physics_extended.cpp  (+21 more)
tests/gui/: EditorUiAutomationHarnessTests.cpp  FullEditorUiAutomationScenarios.cpp
tests/helpers/editor_ui/: EditorUiTestHarness.cpp  EditorUiTestHarness.h  EditorUiTestSurface.cpp  EditorUiTestSurface.h  FullEditorUiTestActions.cpp  FullEditorUiTestActions.h  FullEditorUiTestHost.cpp  FullEditorUiTestHost.h  FullEditorUiTestSetups.cpp  FullEditorUiTestSetups.h  InteractiveEditorUiTestRenderer.cpp  InteractiveEditorUiTestRenderer.h  InteractiveMetalEditorUiTestSurface.mm  InteractiveOpenGlEditorUiTestSurface.cpp
tests/helpers/project_migration/: ProjectMigrationTestFixture.cpp  ProjectMigrationTestFixture.h
tests/integration/assets/: AssetCookIntegrationTests.cpp  ModularAssetImportIntegrationTests.cpp
tests/integration/project/: ProjectMigrationIntegrationTests.cpp
tests/integration/renderer/: EditorViewportMetalSmoke.mm  EditorViewportOpenGLSmoke.cpp
tests/python/: conftest.py  test_project_compatibility_generator.py  test_project_migration_generator.py
tests/ui_scenarios/: EditorUiScenarios.cpp  LauncherUiScenarios.cpp
tests/unit/application/: ProjectCompatibilityTests.cpp  ProjectMigrationTests.cpp
tests/unit/editor/: ActivityBarLayoutTests.cpp  AssetImportModalLifecycleTests.cpp  ContentBrowserPanelRenderTests.cpp  EditorMenuModelTests.cpp  EditorModalHostTests.cpp  EditorSelectionModelTests.cpp  EditorSettingsStoreTests.cpp  EditorStatusBarModelTests.cpp  EditorViewportModelTests.cpp  EditorViewportPickingTests.cpp  EditorViewportSceneTests.cpp  EditorWorkspaceControllerTests.cpp  GuiScreenHostLifecycleTests.cpp  HierarchyModelTests.cpp  HierarchyPanelRenderTests.cpp  InspectorPanelRenderTests.cpp  LocalizationServiceTests.cpp  ProjectCreationControllerTests.cpp  ProjectCreationScreenTests.cpp  ProjectCreationServiceTests.cpp  ProjectMetadataTests.cpp  ProjectMigrationTransactionTests.cpp  ProjectOpenServiceTests.cpp  RecentProjectInspectionServiceTests.cpp  RendererAvailabilityTests.cpp  (+9 more)
(+1371 files in other folders)
